# wallet

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/bls/: CMakeLists.txt
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist  wrapper.cpp
ios/Runner.xcodeproj/: project.pbxproj
ios/bls/Headers/: elements.hpp  hdkeys.hpp  hkdf.hpp  privatekey.hpp  schemes.hpp
ios/relic_s/Headers/: gmp.h  relic_conf.h  relic_types.h
ios/relic_s/Sources/: relic_arch_x64.c  relic_bn_add_low.c  relic_bn_div_low.c  relic_bn_mod_low.c  relic_bn_mul_low.c  relic_bn_shift_low.c  relic_bn_sqr_low.c  relic_fb_add_low.c  relic_fb_shift_low.c  relic_fp_add_low.c  relic_fp_inv_low.c  relic_fp_mul_low.c  relic_fp_rdc_low.c  relic_fp_shift_low.c  relic_fp_sqr_low.c
lib/: app.dart  main.dart
lib/common/asset/: assets.dart  assets_link.dart  gradients.dart  wcolors.dart
lib/common/asset/theme/: light_theme.dart  wtheme.dart
lib/common/blocs/password_creation_bloc/: wallet_creation_bloc.dart  wallet_creation_event.dart  wallet_creation_state.dart
lib/common/blocs/wallet_detail_bloc/: wallet_detail_bloc.dart  wallet_detail_event.dart  wallet_detail_state.dart
lib/common/components/atoms/: atoms.dart  body_text1.dart  body_text2.dart  border_button.dart  button_add.dart  button_close.dart  caption.dart  circle_index.dart  currency_item.dart  h4.dart  h5.dart  h6.dart  panel.dart  pin.dart  primary_button.dart  seach_text_field.dart  square_button.dart  subtitle2.dart  w_loading.dart  w_table.dart  wallet_card.dart
lib/common/components/molecules/: account_creation_card.dart  account_detail_card.dart  feature_list_item.dart  feedback_list_item.dart  molecules.dart  pin_listing.dart  receive_button.dart  (+5 more)
lib/common/engines/: table_render_engine.dart  text_cell_render.dart
lib/core/blockchain/: bls.dart
lib/core/bls/: bls.dart
lib/core/di/: di.dart  injector.dart  module.dart
lib/core/utils/: config.dart  log.dart
lib/modules/: engine_builder_module.dart
test/: widget_test.dart
test/core/: di_tests.dart
web/: index.html  manifest.json
(+33 files in other folders)
